Use `ImmutableList` instead of `List.of`.
Fix refaster